Add example for console command using libcore: cgview
cgview prints a sorted list of inclusive Ir cost of functions.

* the example uses HighestCostList, was moved to libcore
* libcore now free of KDE dependencies (kDebug -> qDebug)

svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=914393

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 project(kcachegrind)
 
 set( KCACHEGRIND_VERSION "0.5.0kde")
@@ -21,6 +20,7 @@ macro_additional_clean_files(
 ENDIF(NOT WIN32)
 
 add_subdirectory( libcore )
+add_subdirectory( cgview )
 add_subdirectory( kcachegrind ) 
 add_subdirectory( pics ) 
 add_subdirectory( converters ) 
