Coverage and StackBrowser have nothing to do with GUI. Move into libcore
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=914396

--- a/libcore/CMakeLists.txt
+++ b/libcore/CMakeLists.txt
@@ -5,6 +5,8 @@ kde4_add_library(core STATIC
    pool.cpp
    subcost.cpp
    tracedata.cpp
+   coverage.cpp
+   stackbrowser.cpp
    utils.cpp
    logger.cpp
    configuration.cpp )
