Introduce Config{Storage,Group} as base for configuration backends
Global options in GlobalConfig (was Configuration) previously
had their KDE implementation for {save,read}Options in
kcachegrind/kconfiguration.cpp. Now, save/readOptions is back
in GlobalConfig and uses the new abstractions instead.

This is needed as basis to get rid of KDE dependencies in libview/
(all views currently use KConfig based option saving/reading)

svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=914401

--- a/kcachegrind/CMakeLists.txt
+++ b/kcachegrind/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories( ../libcore ../libviews )
 
 set(kcachegrind_SRCS
    main.cpp
-   kconfiguration.cpp
+   kdeconfig.cpp
    functionselection.cpp
    partgraph.cpp
    toplevel.cpp
