--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ ENDIF(NOT WIN32)
 add_subdirectory( libcore )
 add_subdirectory( cgview )
 add_subdirectory( libviews )
-add_subdirectory( kcachegrind ) 
-add_subdirectory( pics ) 
-add_subdirectory( converters ) 
+add_subdirectory( kcachegrind )
+add_subdirectory( qcachegrind )
+add_subdirectory( pics )
+add_subdirectory( converters )
