Move FunctionSelection into libviews/, add to qcachegrind
This also gets rid of functionselectionbase.ui.
While it makes the CMakeLists.txt simpler, the design of
the flat profile dockable is not to be changed.

svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=914413

--- a/libviews/CMakeLists.txt
+++ b/libviews/CMakeLists.txt
@@ -1,6 +1,9 @@
 include_directories( ../libcore )
 
 set(libviews_SRCS
+   functionitem.cpp
+   costlistitem.cpp
+   functionselection.cpp
    toplevelbase.cpp
    listutils.cpp
    treemap.cpp
@@ -25,5 +28,3 @@ set(libviews_SRCS
 qt4_automoc(${libviews_SRCS})
 add_library(views STATIC ${libviews_SRCS})
 target_link_libraries(views core)
-
-
