Move StackSelection into libviews/, add to qcachegrind
This also gets rid of partselectionbase.ui

svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=914418

--- a/libviews/CMakeLists.txt
+++ b/libviews/CMakeLists.txt
@@ -1,6 +1,8 @@
 include_directories( ../libcore )
 
 set(libviews_SRCS
+   stackitem.cpp
+   stackselection.cpp
    partgraph.cpp
    partselection.cpp
    functionitem.cpp
