Classify cgview and qcachegrind as examples for using the libs.
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=914772

--- a/cgview/CMakeLists.txt
+++ b/cgview/CMakeLists.txt
@@ -3,4 +3,5 @@ add_executable(cgview main.cpp)
 
 target_link_libraries(cgview core ${QT_QTCORE_LIBRARY} ${QT_QT3SUPPORT_LIBRARY})
 
-install(TARGETS cgview ${INSTALL_TARGETS_DEFAULT_ARGS} )
+# do not install example code...
+# install(TARGETS cgview ${INSTALL_TARGETS_DEFAULT_ARGS} )
