--- a/qcachegrind/CMakeLists.txt
+++ b/qcachegrind/CMakeLists.txt
@@ -11,4 +11,5 @@ target_link_libraries(qcachegrind
 	 ${QT_QTGUI_LIBRARY} ${QT_QTCORE_LIBRARY}
 	  ${QT_QTDBUS_LIBRARY} ${QT_QT3SUPPORT_LIBRARY})
 
-install(TARGETS qcachegrind ${INSTALL_TARGETS_DEFAULT_ARGS} )
+# do not install example code...
+# install(TARGETS qcachegrind ${INSTALL_TARGETS_DEFAULT_ARGS} )
