Move code from tracedata.{h,cpp} into {addr,context,cost,eventtype}.{h,cpp}
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=920432

--- a/libcore/CMakeLists.txt
+++ b/libcore/CMakeLists.txt
@@ -1,10 +1,14 @@
 set(core_SRCS
+   context.cpp
+   cost.cpp
+   eventtype.cpp
+   subcost.cpp
+   addr.cpp
+   tracedata.cpp
+   loader.cpp
    cachegrindloader.cpp
    fixcost.cpp
-   loader.cpp
    pool.cpp
-   subcost.cpp
-   tracedata.cpp
    coverage.cpp
    stackbrowser.cpp
    utils.cpp
