SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=965300

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -21,7 +21,7 @@ GenericName[da]=Grænseflade til profilering
 GenericName[de]=Profiler Oberfläche
 GenericName[el]=Πρόγραμμα προφίλ
 GenericName[eo]=Fasado de Profililo
-GenericName[es]=Interfaz de Profiler
+GenericName[es]=Interfaz del analizador de rendimiento
 GenericName[et]=Profileerimisrakendus
 GenericName[eu]=Profilatzailearen interfazea
 GenericName[fa]=پایانۀ گزارش‌گیر
