Only define QT3_SUPPORT in the subdirs that need them. So that at least new code in e.g. lokalize or new apps in kdesdk aren't compiled with it (kdesdk was the only module where it was still defined at the toplevel, AFAICS)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=980060

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 project(kcachegrind)
 
+# TODO port away from QT3_SUPPORT
+add_definitions(-DQT3_SUPPORT)
+
 set( KCACHEGRIND_VERSION "0.5.1kde")
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/version.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/version.h )
