--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -74,7 +74,7 @@ Comment[et]=Jõudluse profileerimise andmete visualiseerimise vahend
 Comment[eu]=Errendimendu profil datuen bistaratzea
 Comment[fa]=تجسم کارایی گزارش داده‌ها
 Comment[fi]=Visualisointi tehokkuusprofiloinnin tiedoista
-Comment[fr]=Visualisation des données de performance de profilage
+Comment[fr]=Visualisation de données de profilage de performance
 Comment[ga]=Amharcléiriú ar Shonraí Próifílithe Feidhmíochta
 Comment[gl]=Visualización dos datos da análise de rendimento
 Comment[hu]=Teljesítményprofil-adatok megjelenítése
