SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=994987

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -76,7 +76,7 @@ Comment[fa]=تجسم کارایی گزارش داده‌ها
 Comment[fi]=Visualisointi tehokkuusprofiloinnin tiedoista
 Comment[fr]=Visualisation de données de profilage de performance
 Comment[ga]=Amharcléiriú ar Shonraí Próifílithe Feidhmíochta
-Comment[gl]=Visualización dos datos da análise de rendimento
+Comment[gl]=Visualización dos datos da análise de rendemento
 Comment[hu]=Teljesítményprofil-adatok megjelenítése
 Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
 Comment[it]=Visualizzazione dei dati di profiling delle prestazioni
