SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.3/kdesdk/kcachegrind/; revision=1024440

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -7,12 +7,55 @@ Icon=kcachegrind
 X-DocPath=kcachegrind/index.html
 Terminal=false
 Name=KCachegrind
+Name[br]=KCachegrind
+Name[ca]=KCachegrind
+Name[cs]=KCachegrind
+Name[cy]=KCachegrind
+Name[da]=KCachegrind
+Name[de]=KCachegrind
+Name[el]=KCachegrind
+Name[en_GB]=KCachegrind
+Name[eo]=KCachegrind
+Name[es]=KCachegrind
+Name[et]=KCachegrind
+Name[eu]=KCachegrind
+Name[fi]=KCachegrind
+Name[fr]=KCachegrind
+Name[ga]=KCachegrind
+Name[gl]=KCachegrind
+Name[he]=KCachegrind
+Name[hu]=KCachegrind
+Name[is]=KCachegrind
+Name[it]=KCachegrind
+Name[ja]=KCachegrind
+Name[kk]=KCachegrind
+Name[km]=KCachegrind
+Name[ko]=KCachegrind
+Name[lt]=KCachegrind
+Name[lv]=KCachegrind
+Name[nb]=KCachegrind
+Name[nds]=KCachegrind
 Name[ne]=केडीई क्यास ग्रिन्ड
+Name[nl]=KCachegrind
+Name[nn]=KCachegrind
+Name[pa]=KCachegrind
+Name[pl]=KCachegrind
+Name[pt]=KCachegrind
+Name[pt_BR]=KCachegrind
+Name[ro]=KCachegrind
+Name[ru]=KCachegrind
+Name[sk]=KCachegrind
+Name[sl]=KCachegrind
 Name[sr]=К‑кешгринд
 Name[sr@latin]=KCacheGrind
 Name[sv]=Kcachegrind
 Name[ta]=  இடைமாற்றகட்டம்
+Name[tg]=KCachegrind
+Name[tr]=KCachegrind
+Name[uk]=KCachegrind
 Name[x-test]=xxKCachegrindxx
+Name[zh_CN]=KCachegrind
+Name[zh_TW]=KCachegrind
 GenericName=Profiler Frontend
 GenericName[ca]=Interfície de Profiler
 GenericName[cs]=Rozhraní pro profilaci
@@ -20,6 +63,7 @@ GenericName[cy]=Blaen-wyneb Proffilydd
 GenericName[da]=Grænseflade til profilering
 GenericName[de]=Profiler Oberfläche
 GenericName[el]=Πρόγραμμα προφίλ
+GenericName[en_GB]=Profiler Frontend
 GenericName[eo]=Fasado de Profililo
 GenericName[es]=Interfaz del analizador de rendimiento
 GenericName[et]=Profileerimisrakendus
