SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1027109

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -7,6 +7,7 @@ Icon=kcachegrind
 X-DocPath=kcachegrind/index.html
 Terminal=false
 Name=KCachegrind
+Name[bg]=KCachegrind
 Name[br]=KCachegrind
 Name[ca]=KCachegrind
 Name[cs]=KCachegrind
@@ -107,6 +108,7 @@ GenericName[x-test]=xxProfiler Frontendxx
 GenericName[zh_CN]=性能测试数据前端
 GenericName[zh_TW]=分析器前端
 Comment=Visualization of Performance Profiling Data
+Comment[bg]=Визуализация на данните за производителност
 Comment[ca]=Visualització de dades de perfilat de rendiment
 Comment[cs]=Vizualizace profilovacích dat výkonu
 Comment[da]=Visualisering af profileringsdata
