qcachegrind: add currently empty configuration dialog
The config consists currently only of a test config page.

svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1048527

--- a/qcachegrind/CMakeLists.txt
+++ b/qcachegrind/CMakeLists.txt
@@ -1,6 +1,7 @@
 include_directories(../libcore ../libviews)
 
-set(qcachegrind_SRCS qcgmain.cpp qcgtoplevel.cpp qcgconfig.cpp)
+set(qcachegrind_SRCS qcgmain.cpp qcgtoplevel.cpp qcgconfig.cpp
+                     configdialog.cpp configpage.cpp)
 
 qt4_automoc(${qcachegrind_SRCS})
 qt4_add_resources(qcachegrind_RSRC qcachegrind.qrc)
