QCachegrind: config page for base directories of source files
This looks nicer than the config dialog of KCachegrind itself
now, so I will probably use it for both if all the functionality
is there.
Especially, one can jump now to specific places in the config
dialog via a string. So we can connect context menu items to
specific views to config pages. This is a start to move all
the view config hiding in context menues into a config page.

Anyway, missing from KCachegrind configuration now only are
the color settings for cost items. However, I actually never
changed a color, so probably also nobody else...

svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1048836

--- a/qcachegrind/CMakeLists.txt
+++ b/qcachegrind/CMakeLists.txt
@@ -2,10 +2,10 @@ include_directories(../libcore ../libviews)
 
 set(qcachegrind_SRCS qcgmain.cpp qcgtoplevel.cpp qcgconfig.cpp
                      configdialog.cpp configpage.cpp
-                     generalsettings.cpp)
+		     generalsettings.cpp sourcesettings.cpp)
 
 qt4_automoc(${qcachegrind_SRCS})
-qt4_wrap_ui(qcachegrind_H generalsettings.ui)
+qt4_wrap_ui(qcachegrind_H generalsettings.ui sourcesettings.ui)
 qt4_add_resources(qcachegrind_RSRC qcachegrind.qrc)
 
 add_executable(qcachegrind ${qcachegrind_SRCS} ${qcachegrind_H} ${qcachegrind_RSRC})
