SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.3/kdesdk/kcachegrind/; revision=1051240

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -95,8 +95,8 @@ GenericName[ro]=Interfață grafică pentru Profiler
 GenericName[ru]=Интерфейс к профилировщику
 GenericName[sk]=Rozhranie pre profiler
 GenericName[sl]=Vmesnik profilnika
-GenericName[sr]=Сучеље профилизатора
-GenericName[sr@latin]=Sučelje profilizatora
+GenericName[sr]=Прочеље профилизатора
+GenericName[sr@latin]=Pročelje profilizatora
 GenericName[sv]=Profileringsgränssnitt
 GenericName[ta]= விவரக்குறிப்பு முன்பகுதி
 GenericName[tg]=Интерфейс ба профилкунанда
