SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.3/kdesdk/kcachegrind/; revision=1072376

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -9,6 +9,7 @@ Terminal=false
 Name=KCachegrind
 Name[br]=KCachegrind
 Name[ca]=KCachegrind
+Name[ca@valencia]=KCachegrind
 Name[cs]=KCachegrind
 Name[cy]=KCachegrind
 Name[da]=KCachegrind
@@ -58,6 +59,7 @@ Name[zh_CN]=KCachegrind
 Name[zh_TW]=KCachegrind
 GenericName=Profiler Frontend
 GenericName[ca]=Interfície de Profiler
+GenericName[ca@valencia]=Interfície de Profiler
 GenericName[cs]=Rozhraní pro profilaci
 GenericName[cy]=Blaen-wyneb Proffilydd
 GenericName[da]=Grænseflade til profilering
@@ -108,6 +110,7 @@ GenericName[zh_CN]=性能测试数据前端
 GenericName[zh_TW]=分析器前端
 Comment=Visualization of Performance Profiling Data
 Comment[ca]=Visualització de dades de perfilat de rendiment
+Comment[ca@valencia]=Visualització de dades de perfilat de rendiment
 Comment[cs]=Vizualizace profilovacích dat výkonu
 Comment[da]=Visualisering af profileringsdata
 Comment[de]=Visualisierung von Daten des Laufzeitverhaltens eines Programmes
