Add global option to hide C++ template parameters in symbols
This adds a toolbar button (+icon) and a menu item under "View".
When template parameters are hidden, you get the full symbol
by hovering over the active symbol name label. The later even
shows the structure of a C++ symbol.

Works both with KCachegrind and QCachegrind.

(done with the help of / partly by Michael Dengler)

svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1078313

--- a/kcachegrind/kcachegrindui.rc
+++ b/kcachegrind/kcachegrindui.rc
@@ -27,6 +27,7 @@
    <Action name="view_percentage"/>
    <Action name="view_expanded"/>
    <Action name="view_cycles"/>
+   <Action name="hide_templates"/>
   </Menu>
   <Menu name="settings">
    <Menu append="show_toolbar_merge"><text>Sidebars</text>
@@ -48,6 +49,7 @@
   <Action name="view_percentage"/>
   <Action name="view_cycles"/>
   <Action name="view_expanded"/>
+  <Action name="hide_templates"/>
  </ToolBar>
  <ToolBar name="stateToolBar" noMerge="1"><text>State Toolbar</text> 
   <Action name="view_cost_type"/>
