SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdesdk/kcachegrind/; revision=1082809

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -66,7 +66,7 @@ GenericName[ca@valencia]=Interfície de Profiler
 GenericName[cs]=Rozhraní pro profilaci
 GenericName[cy]=Blaen-wyneb Proffilydd
 GenericName[da]=Grænseflade til profilering
-GenericName[de]=Profiler Oberfläche
+GenericName[de]=Profiler-Oberfläche
 GenericName[el]=Πρόγραμμα προφίλ
 GenericName[en_GB]=Profiler Frontend
 GenericName[eo]=Fasado de Profililo
