SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1085569

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -10,6 +10,7 @@ Name=KCachegrind
 Name[bg]=KCachegrind
 Name[br]=KCachegrind
 Name[ca]=KCachegrind
+Name[ca@valencia]=KCachegrind
 Name[cs]=KCachegrind
 Name[cy]=KCachegrind
 Name[da]=KCachegrind
@@ -61,10 +62,11 @@ Name[zh_CN]=KCachegrind
 Name[zh_TW]=KCachegrind
 GenericName=Profiler Frontend
 GenericName[ca]=Interfície de Profiler
+GenericName[ca@valencia]=Interfície de Profiler
 GenericName[cs]=Rozhraní pro profilaci
 GenericName[cy]=Blaen-wyneb Proffilydd
 GenericName[da]=Grænseflade til profilering
-GenericName[de]=Profiler Oberfläche
+GenericName[de]=Profiler-Oberfläche
 GenericName[el]=Πρόγραμμα προφίλ
 GenericName[en_GB]=Profiler Frontend
 GenericName[eo]=Fasado de Profililo
@@ -114,6 +116,7 @@ GenericName[zh_TW]=分析器前端
 Comment=Visualization of Performance Profiling Data
 Comment[bg]=Визуализация на данните за производителност
 Comment[ca]=Visualització de dades de perfilat de rendiment
+Comment[ca@valencia]=Visualització de dades de perfilat de rendiment
 Comment[cs]=Vizualizace profilovacích dat výkonu
 Comment[da]=Visualisering af profileringsdata
 Comment[de]=Visualisierung von Daten des Laufzeitverhaltens eines Programmes
