Split global config options in non-GUI and GUI parts
This makes libcore free from any Qt GUI classes.
Now the command line tool "cgview" only links to QtCore.

svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1122920

--- a/cgview/CMakeLists.txt
+++ b/cgview/CMakeLists.txt
@@ -1,7 +1,7 @@
 include_directories(../libcore)
 add_executable(cgview main.cpp)
 
-target_link_libraries(cgview core ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
+target_link_libraries(cgview core ${QT_QTCORE_LIBRARY})
 
 # do not install example code...
 # install(TARGETS cgview ${INSTALL_TARGETS_DEFAULT_ARGS} )
