Fix compile for cmake build of kcachegrind
Last commits where only tested with qmake/qcachegrind :(

This also renames FunctionListModel::setData() to
...::resetDataModel() to avoid compile warnings.

svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1124717

--- a/libviews/CMakeLists.txt
+++ b/libviews/CMakeLists.txt
@@ -6,8 +6,8 @@ set(libviews_SRCS
    stackselection.cpp
    partgraph.cpp
    partselection.cpp
-   functionitem.cpp
    costlistitem.cpp
+   functionlistmodel.cpp
    functionselection.cpp
    toplevelbase.cpp
    listutils.cpp
