--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -85,7 +85,7 @@ GenericName[ja]=プロファイラフロントエンド
 GenericName[kk]=Профильдеткіштің интерфейсі
 GenericName[km]=កម្មវិធី​ផ្នែកខាង​មុខ​របស់​ទម្រង់
 GenericName[ko]=프로파일러 프론트엔드
-GenericName[lt]=Profiliuoklio naudotojo sąsaja
+GenericName[lt]=Profiliuoklio vartotojo sąsaja
 GenericName[lv]=Profilēšanas priekšpuse
 GenericName[nb]=Grensesnitt for profilvisning
 GenericName[nds]=Profiler-Böversiet
