SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.5/kdesdk/kcachegrind/; revision=1182590

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -140,6 +140,7 @@ Comment[ko]=성능 프로파일링 데이터 시각화
 Comment[lt]=Veikimo profiliavimo duomenų vizualizacija
 Comment[lv]=Veiktspējas profilēšanas datu vizualizācija
 Comment[nb]=Vis informasjon om ytelse.
+Comment[nds]=Visualiseren vun Programmleisten-Looptietdaten
 Comment[ne]=सम्पादन प्रोफाइलिङ डाटाको दृष्टिकरण
 Comment[nl]=Visualisatie van Performance Profiling Data
 Comment[nn]=Vis informasjon om yting
