SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1188906

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -7,6 +7,7 @@ Icon=kcachegrind
 X-DocPath=kcachegrind/index.html
 Terminal=false
 Name=KCachegrind
+Name[ast]=KCachegrind
 Name[bg]=KCachegrind
 Name[br]=KCachegrind
 Name[ca]=KCachegrind
@@ -61,6 +62,7 @@ Name[x-test]=xxKCachegrindxx
 Name[zh_CN]=KCachegrind
 Name[zh_TW]=KCachegrind
 GenericName=Profiler Frontend
+GenericName[ast]=Interface del analizador de rendimientu
 GenericName[ca]=Interfície de Profiler
 GenericName[ca@valencia]=Interfície de Profiler
 GenericName[cs]=Rozhraní pro profilaci
@@ -114,6 +116,7 @@ GenericName[x-test]=xxProfiler Frontendxx
 GenericName[zh_CN]=性能测试数据前端
 GenericName[zh_TW]=分析器前端
 Comment=Visualization of Performance Profiling Data
+Comment[ast]=Visualización de datos d'analís de rendimientu
 Comment[bg]=Визуализация на данните за производителност
 Comment[ca]=Visualització de dades de perfilat de rendiment
 Comment[ca@valencia]=Visualització de dades de perfilat de rendiment
