--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -10,6 +10,7 @@ Name=KCachegrind
 Name[ast]=KCachegrind
 Name[bg]=KCachegrind
 Name[br]=KCachegrind
+Name[bs]=KCachegrind
 Name[ca]=KCachegrind
 Name[ca@valencia]=KCachegrind
 Name[cs]=KCachegrind
@@ -63,6 +64,7 @@ Name[zh_CN]=KCachegrind
 Name[zh_TW]=KCachegrind
 GenericName=Profiler Frontend
 GenericName[ast]=Interface del analizador de rendimientu
+GenericName[bs]=Profajlerski program
 GenericName[ca]=Interfície de Profiler
 GenericName[ca@valencia]=Interfície de Profiler
 GenericName[cs]=Rozhraní pro profilaci
@@ -118,6 +120,7 @@ GenericName[zh_TW]=分析器前端
 Comment=Visualization of Performance Profiling Data
 Comment[ast]=Visualización de datos d'analís de rendimientu
 Comment[bg]=Визуализация на данните за производителност
+Comment[bs]=Predočenje podataka profiliranja performansi
 Comment[ca]=Visualització de dades de perfilat de rendiment
 Comment[ca@valencia]=Visualització de dades de perfilat de rendiment
 Comment[cs]=Vizualizace profilovacích dat výkonu
