SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1232058

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -89,7 +89,7 @@ GenericName[ja]=プロファイラフロントエンド
 GenericName[kk]=Профильдеткіштің интерфейсі
 GenericName[km]=កម្មវិធី​ផ្នែក​ខាង​មុខ​របស់​ទម្រង់
 GenericName[ko]=프로파일러 프론트엔드
-GenericName[lt]=Profiliuoklio vartotojo sąsaja
+GenericName[lt]=Profiliuoklio naudotojo sąsaja
 GenericName[lv]=Profilēšanas priekšpuse
 GenericName[nb]=Grensesnitt for profilvisning
 GenericName[nds]=Profiler-Böversiet
