SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.7/kdesdk/kcachegrind/; revision=1239882

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -99,7 +99,7 @@ GenericName[nn]=Grensesnitt for profilvising
 GenericName[pa]=ਪਰੋਫਾਇਲਰ ਫਰੰਟ-ਐਂਡ
 GenericName[pl]=Interfejs do profilera
 GenericName[pt]=Interface de Análise de Performance
-GenericName[pt_BR]=Interface de Análise de Performance
+GenericName[pt_BR]=Interface de análise de performance
 GenericName[ro]=Interfață grafică pentru Profiler
 GenericName[ru]=Интерфейс к профилировщику
 GenericName[sk]=Rozhranie pre profiler
@@ -152,7 +152,7 @@ Comment[nl]=Visualisatie van Performance Profiling Data
 Comment[nn]=Vis informasjon om yting
 Comment[pl]=Wizualizacja danych profilowania wydajności
 Comment[pt]=Visualização dos Dados de Análise de Performance
-Comment[pt_BR]=Visualização dos Dados de Análise de Performance
+Comment[pt_BR]=Visualização dos dados de análise de desempenho
 Comment[ru]=Утилита для визуального профилирования приложений
 Comment[sk]=Vizualizácia dát o výkone
 Comment[sl]=Vizualizacija podatkov profilnih zmogljivosti
