SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.7/kdesdk/kcachegrind/; revision=1247366

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -58,6 +58,7 @@ Name[sv]=Kcachegrind
 Name[ta]=  இடைமாற்றகட்டம்
 Name[tg]=KCachegrind
 Name[tr]=KCachegrind
+Name[ug]=KCachegrind
 Name[uk]=KCachegrind
 Name[x-test]=xxKCachegrindxx
 Name[zh_CN]=KCachegrind
