--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -7,5 +7,109 @@ Icon=kcachegrind
 Terminal=false
 Name=QCachegrind
 GenericName=Profiler Frontend
+GenericName[ast]=Interface del analizador de rendimientu
+GenericName[bs]=Profajlerski program
+GenericName[ca]=Interfície de Profiler
+GenericName[ca@valencia]=Interfície de Profiler
+GenericName[cs]=Rozhraní pro profilaci
+GenericName[cy]=Blaen-wyneb Proffilydd
+GenericName[da]=Grænseflade til profilering
+GenericName[de]=Profiler-Oberfläche
+GenericName[el]=Πρόγραμμα προφίλ
+GenericName[en_GB]=Profiler Frontend
+GenericName[eo]=Fasado de Profililo
+GenericName[es]=Interfaz del analizador de rendimiento
+GenericName[et]=Profileerimisrakendus
+GenericName[eu]=Profilatzailearen interfazea
+GenericName[fa]=پایانۀ گزارش‌گیر
+GenericName[fi]=Profiloijan käyttöliittymä
+GenericName[fr]=Interface de profilage
+GenericName[ga]=Comhéadan ar Phróifíleoir
+GenericName[gl]=Interface para o profiler
+GenericName[hu]=Profilozó
+GenericName[is]=Myndrænt viðmót á afkastakönnuð
+GenericName[it]=Interfaccia a profiler
+GenericName[ja]=プロファイラフロントエンド
+GenericName[kk]=Профильдеткіштің интерфейсі
+GenericName[km]=កម្មវិធី​ផ្នែក​ខាង​មុខ​របស់​ទម្រង់
+GenericName[ko]=프로파일러 프론트엔드
+GenericName[lt]=Profiliuoklio naudotojo sąsaja
+GenericName[lv]=Profilēšanas priekšpuse
+GenericName[nb]=Grensesnitt for profilvisning
+GenericName[nds]=Profiler-Böversiet
+GenericName[ne]=प्रोफाइलर फ्रन्टइन्ड
+GenericName[nl]=Profiler-hulpprogramma
+GenericName[nn]=Grensesnitt for profilvising
+GenericName[pa]=ਪਰੋਫਾਇਲਰ ਫਰੰਟ-ਐਂਡ
+GenericName[pl]=Interfejs do profilera
+GenericName[pt]=Interface de Análise de Performance
+GenericName[pt_BR]=Interface de análise de performance
+GenericName[ro]=Interfață grafică pentru Profiler
+GenericName[ru]=Интерфейс к профилировщику
+GenericName[sk]=Rozhranie pre profiler
+GenericName[sl]=Vmesnik profilnika
+GenericName[sr]=Прочеље профилизатора
+GenericName[sr@ijekavian]=Прочеље профилизатора
+GenericName[sr@ijekavianlatin]=Pročelje profilizatora
+GenericName[sr@latin]=Pročelje profilizatora
+GenericName[sv]=Profileringsgränssnitt
+GenericName[ta]= விவரக்குறிப்பு முன்பகுதி
+GenericName[tg]=Интерфейс ба профилкунанда
+GenericName[tr]=Profil Önyüzü
+GenericName[uk]=Інтерфейс до Profiler
+GenericName[wa]=Eterface grafike po Profiler
+GenericName[x-test]=xxProfiler Frontendxx
+GenericName[zh_CN]=性能测试数据前端
+GenericName[zh_TW]=分析器前端
 Comment=Visualization of Performance Profiling Data
+Comment[ast]=Visualización de datos d'analís de rendimientu
+Comment[bg]=Визуализация на данните за производителност
+Comment[bs]=Predočenje podataka profiliranja performansi
+Comment[ca]=Visualització de dades de perfilat de rendiment
+Comment[ca@valencia]=Visualització de dades de perfilat de rendiment
+Comment[cs]=Vizualizace profilovacích dat výkonu
+Comment[da]=Visualisering af profileringsdata
+Comment[de]=Visualisierung von Daten des Laufzeitverhaltens eines Programmes
+Comment[el]=Αναπαράσταση δεδομένων ταχύτητας προφίλ
+Comment[en_GB]=Visualisation of Performance Profiling Data
+Comment[es]=Visualización de datos de análisis de rendimiento
+Comment[et]=Jõudluse profileerimise andmete visualiseerimise vahend
+Comment[eu]=Errendimendu profil datuen bistaratzea
+Comment[fa]=تجسم کارایی گزارش داده‌ها
+Comment[fi]=Visualisointi tehokkuusprofiloinnin tiedoista
+Comment[fr]=Visualisation de données de profilage de performance
+Comment[ga]=Amharcléiriú ar Shonraí Próifílithe Feidhmíochta
+Comment[gl]=Visualización dos datos da análise de rendemento
+Comment[hu]=Teljesítményprofil-adatok megjelenítése
+Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
+Comment[it]=Visualizzazione dei dati di profiling delle prestazioni
+Comment[ja]=パフォーマンスプロファイルデータを視覚化
+Comment[kk]=Деректерді профильдеудің визуализациясы
+Comment[km]=កា​រ​មើល​ឃើញ​ការ​អនុវត្ត​របស់​ទិន្នន័យ​ទម្រង់
+Comment[ko]=성능 프로파일링 데이터 시각화
+Comment[lt]=Veikimo profiliavimo duomenų vizualizacija
+Comment[lv]=Veiktspējas profilēšanas datu vizualizācija
+Comment[nb]=Vis informasjon om ytelse.
+Comment[nds]=Visualiseren vun Programmleisten-Looptietdaten
+Comment[ne]=सम्पादन प्रोफाइलिङ डाटाको दृष्टिकरण
+Comment[nl]=Visualisatie van Performance Profiling Data
+Comment[nn]=Vis informasjon om yting
+Comment[pl]=Wizualizacja danych profilowania wydajności
+Comment[pt]=Visualização dos Dados de Análise de Performance
+Comment[pt_BR]=Visualização dos dados de análise de desempenho
+Comment[ru]=Утилита для визуального профилирования приложений
+Comment[sk]=Vizualizácia dát o výkone
+Comment[sl]=Vizualizacija podatkov profilnih zmogljivosti
+Comment[sr]=Визуелизација профилисања перформанси
+Comment[sr@ijekavian]=Визуелизација профилисања перформанси
+Comment[sr@ijekavianlatin]=Vizuelizacija profilisanja performansi
+Comment[sr@latin]=Vizuelizacija profilisanja performansi
+Comment[sv]=Åskådliggörande av profileringsdata för prestanda
+Comment[ta]= விவர தகவலை செயல்பாட்டு காட்சியாளிப்பு
+Comment[tg]=Утилита барои гузориши профили визуалӣ
+Comment[tr]=Performans Profilleme Verisinin Görünür Hali
+Comment[uk]=Візуалізація даних профілювання швидкодії
+Comment[x-test]=xxVisualization of Performance Profiling Dataxx
+Comment[zh_CN]=性能测试数据的可视化表现
+Comment[zh_TW]=效能分析資料視覺化
 Categories=Qt;Development;
