--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -6,6 +6,10 @@ MimeType=application/x-kcachegrind;
 Icon=kcachegrind
 Terminal=false
 Name=QCachegrind
+Name[pt]=QCachegrind
+Name[pt_BR]=QCachegrind
+Name[uk]=QCachegrind
+Name[x-test]=xxQCachegrindxx
 GenericName=Profiler Frontend
 GenericName[ast]=Interface del analizador de rendimientu
 GenericName[bs]=Profajlerski program
