--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -6,6 +6,7 @@ MimeType=application/x-kcachegrind;
 Icon=kcachegrind
 Terminal=false
 Name=QCachegrind
+Name[nl]=QCachegrind
 Name[pt]=QCachegrind
 Name[pt_BR]=QCachegrind
 Name[uk]=QCachegrind
