SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1253986

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -13,6 +13,7 @@ Name[pt_BR]=QCachegrind
 Name[sv]=Qcachegrind
 Name[uk]=QCachegrind
 Name[x-test]=xxQCachegrindxx
+Name[zh_TW]=QCachegrind
 GenericName=Profiler Frontend
 GenericName[ast]=Interface del analizador de rendimientu
 GenericName[bs]=Profajlerski program
