SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1256487

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -7,6 +7,7 @@ Icon=kcachegrind
 Terminal=false
 Name=QCachegrind
 Name[ca]=QCachegrind
+Name[lt]=QCachegrind
 Name[nb]=QCachegrind
 Name[nl]=QCachegrind
 Name[pt]=QCachegrind
