--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -66,7 +66,7 @@ Name[zh_TW]=KCachegrind
 GenericName=Profiler Frontend
 GenericName[ast]=Interface del analizador de rendimientu
 GenericName[bs]=Profajlerski program
-GenericName[ca]=Interfície de Profiler
+GenericName[ca]=Frontal del Profiler
 GenericName[ca@valencia]=Interfície de Profiler
 GenericName[cs]=Rozhraní pro profilaci
 GenericName[cy]=Blaen-wyneb Proffilydd
