SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1260621

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -8,6 +8,7 @@ Terminal=false
 Name=QCachegrind
 Name[ca]=QCachegrind
 Name[de]=QCachegrind
+Name[hu]=QCachegrind
 Name[lt]=QCachegrind
 Name[nb]=QCachegrind
 Name[nl]=QCachegrind
