--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -17,6 +17,7 @@ Name[pt_BR]=QCachegrind
 Name[sv]=Qcachegrind
 Name[uk]=QCachegrind
 Name[x-test]=xxQCachegrindxx
+Name[zh_CN]=QCachegrind
 Name[zh_TW]=QCachegrind
 GenericName=Profiler Frontend
 GenericName[ast]=Interface del analizador de rendimientu
