SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1268559

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -9,6 +9,7 @@ Name=QCachegrind
 Name[ca]=QCachegrind
 Name[de]=QCachegrind
 Name[hu]=QCachegrind
+Name[kk]=QCachegrind
 Name[lt]=QCachegrind
 Name[nb]=QCachegrind
 Name[nl]=QCachegrind
