SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1268925

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -8,7 +8,9 @@ Terminal=false
 Name=QCachegrind
 Name[ca]=QCachegrind
 Name[de]=QCachegrind
+Name[es]=QCachegrind
 Name[hu]=QCachegrind
+Name[it]=QCachegrind
 Name[kk]=QCachegrind
 Name[lt]=QCachegrind
 Name[nb]=QCachegrind
@@ -35,7 +37,7 @@ GenericName[eo]=Fasado de Profililo
 GenericName[es]=Interfaz del analizador de rendimiento
 GenericName[et]=Profileerimisrakendus
 GenericName[eu]=Profilatzailearen interfazea
-GenericName[fa]=پایانۀ گزارش‌گیر
+GenericName[fa]=پایانه گزارش‌گیر
 GenericName[fi]=Profiloijan käyttöliittymä
 GenericName[fr]=Interface de profilage
 GenericName[ga]=Comhéadan ar Phróifíleoir
@@ -96,7 +98,7 @@ Comment[ga]=Amharcléiriú ar Shonraí Próifílithe Feidhmíochta
 Comment[gl]=Visualización dos datos da análise de rendemento
 Comment[hu]=Teljesítményprofil-adatok megjelenítése
 Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
-Comment[it]=Visualizzazione dei dati di profiling delle prestazioni
+Comment[it]=Visualizzazione dei dati di profilo delle prestazioni
 Comment[ja]=パフォーマンスプロファイルデータを視覚化
 Comment[kk]=Деректерді профильдеудің визуализациясы
 Comment[km]=កា​រ​មើល​ឃើញ​ការ​អនុវត្ត​របស់​ទិន្នន័យ​ទម្រង់
