--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -78,7 +78,7 @@ GenericName[eo]=Fasado de Profililo
 GenericName[es]=Interfaz del analizador de rendimiento
 GenericName[et]=Profileerimisrakendus
 GenericName[eu]=Profilatzailearen interfazea
-GenericName[fa]=پایانۀ گزارش‌گیر
+GenericName[fa]=پایانه گزارش‌گیر
 GenericName[fi]=Profiloijan käyttöliittymä
 GenericName[fr]=Interface de profilage
 GenericName[ga]=Comhéadan ar Phróifíleoir
@@ -139,7 +139,7 @@ Comment[ga]=Amharcléiriú ar Shonraí Próifílithe Feidhmíochta
 Comment[gl]=Visualización dos datos da análise de rendemento
 Comment[hu]=Teljesítményprofil-adatok megjelenítése
 Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
-Comment[it]=Visualizzazione dei dati di profiling delle prestazioni
+Comment[it]=Visualizzazione dei dati di profilo delle prestazioni
 Comment[ja]=パフォーマンスプロファイルデータを視覚化
 Comment[kk]=Деректерді профильдеудің визуализациясы
 Comment[km]=កា​រ​មើល​ឃើញ​ការ​អនុវត្ត​របស់​ទិន្នន័យ​ទម្រង់
