SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.8/kdesdk/kcachegrind/; revision=1269985

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -9,6 +9,7 @@ Name=QCachegrind
 Name[ca]=QCachegrind
 Name[de]=QCachegrind
 Name[es]=QCachegrind
+Name[et]=QCachegrind
 Name[hu]=QCachegrind
 Name[it]=QCachegrind
 Name[kk]=QCachegrind
