SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.8/kdesdk/kcachegrind/; revision=1271265

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -10,6 +10,7 @@ Name[ca]=QCachegrind
 Name[de]=QCachegrind
 Name[es]=QCachegrind
 Name[et]=QCachegrind
+Name[ga]=QCachegrind
 Name[hu]=QCachegrind
 Name[it]=QCachegrind
 Name[kk]=QCachegrind
