--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -67,7 +67,7 @@ GenericName=Profiler Frontend
 GenericName[ast]=Interface del analizador de rendimientu
 GenericName[bs]=Profajlerski program
 GenericName[ca]=Frontal del Profiler
-GenericName[ca@valencia]=Interfície de Profiler
+GenericName[ca@valencia]=Frontal del Profiler
 GenericName[cs]=Rozhraní pro profilaci
 GenericName[cy]=Blaen-wyneb Proffilydd
 GenericName[da]=Grænseflade til profilering
