SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.8/kdesdk/kcachegrind/; revision=1272714

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -7,6 +7,7 @@ Icon=kcachegrind
 Terminal=false
 Name=QCachegrind
 Name[ca]=QCachegrind
+Name[ca@valencia]=QCachegrind
 Name[de]=QCachegrind
 Name[es]=QCachegrind
 Name[et]=QCachegrind
@@ -17,6 +18,7 @@ Name[kk]=QCachegrind
 Name[lt]=QCachegrind
 Name[nb]=QCachegrind
 Name[nl]=QCachegrind
+Name[pl]=QCachegrind
 Name[pt]=QCachegrind
 Name[pt_BR]=QCachegrind
 Name[sv]=Qcachegrind
@@ -28,7 +30,7 @@ GenericName=Profiler Frontend
 GenericName[ast]=Interface del analizador de rendimientu
 GenericName[bs]=Profajlerski program
 GenericName[ca]=Frontal del Profiler
-GenericName[ca@valencia]=Interfície de Profiler
+GenericName[ca@valencia]=Frontal del Profiler
 GenericName[cs]=Rozhraní pro profilaci
 GenericName[cy]=Blaen-wyneb Proffilydd
 GenericName[da]=Grænseflade til profilering
