SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.8/kdesdk/kcachegrind/; revision=1273879

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -9,6 +9,7 @@ Name=QCachegrind
 Name[ca]=QCachegrind
 Name[ca@valencia]=QCachegrind
 Name[de]=QCachegrind
+Name[el]=QCachegrind
 Name[es]=QCachegrind
 Name[et]=QCachegrind
 Name[ga]=QCachegrind
@@ -18,9 +19,14 @@ Name[kk]=QCachegrind
 Name[lt]=QCachegrind
 Name[nb]=QCachegrind
 Name[nl]=QCachegrind
+Name[pa]=QCachegrind
 Name[pl]=QCachegrind
 Name[pt]=QCachegrind
 Name[pt_BR]=QCachegrind
+Name[sr]=Ку‑кешгринд
+Name[sr@ijekavian]=Ку‑кешгринд
+Name[sr@ijekavianlatin]=QCacheGrind
+Name[sr@latin]=QCacheGrind
 Name[sv]=Qcachegrind
 Name[uk]=QCachegrind
 Name[x-test]=xxQCachegrindxx
