SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1276451

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -7,16 +7,26 @@ Icon=kcachegrind
 Terminal=false
 Name=QCachegrind
 Name[ca]=QCachegrind
+Name[ca@valencia]=QCachegrind
 Name[de]=QCachegrind
+Name[el]=QCachegrind
 Name[es]=QCachegrind
+Name[et]=QCachegrind
+Name[ga]=QCachegrind
 Name[hu]=QCachegrind
 Name[it]=QCachegrind
 Name[kk]=QCachegrind
 Name[lt]=QCachegrind
 Name[nb]=QCachegrind
 Name[nl]=QCachegrind
+Name[pa]=QCachegrind
+Name[pl]=QCachegrind
 Name[pt]=QCachegrind
 Name[pt_BR]=QCachegrind
+Name[sr]=Ку‑кешгринд
+Name[sr@ijekavian]=Ку‑кешгринд
+Name[sr@ijekavianlatin]=QCacheGrind
+Name[sr@latin]=QCacheGrind
 Name[sv]=Qcachegrind
 Name[uk]=QCachegrind
 Name[x-test]=xxQCachegrindxx
@@ -26,7 +36,7 @@ GenericName=Profiler Frontend
 GenericName[ast]=Interface del analizador de rendimientu
 GenericName[bs]=Profajlerski program
 GenericName[ca]=Frontal del Profiler
-GenericName[ca@valencia]=Interfície de Profiler
+GenericName[ca@valencia]=Frontal del Profiler
 GenericName[cs]=Rozhraní pro profilaci
 GenericName[cy]=Blaen-wyneb Proffilydd
 GenericName[da]=Grænseflade til profilering
