--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -23,6 +23,7 @@ Name[pa]=QCachegrind
 Name[pl]=QCachegrind
 Name[pt]=QCachegrind
 Name[pt_BR]=QCachegrind
+Name[sk]=QCachegrind
 Name[sr]=Ку‑кешгринд
 Name[sr@ijekavian]=Ку‑кешгринд
 Name[sr@ijekavianlatin]=QCacheGrind
