SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1286789

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -8,6 +8,7 @@ Terminal=false
 Name=QCachegrind
 Name[ca]=QCachegrind
 Name[ca@valencia]=QCachegrind
+Name[da]=QCachegrind
 Name[de]=QCachegrind
 Name[el]=QCachegrind
 Name[es]=QCachegrind
