SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.8/kdesdk/kcachegrind/; revision=1289926

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -30,6 +30,7 @@ Name[sr@ijekavian]=Ку‑кешгринд
 Name[sr@ijekavianlatin]=QCacheGrind
 Name[sr@latin]=QCacheGrind
 Name[sv]=Qcachegrind
+Name[tr]=QCachegrind
 Name[uk]=QCachegrind
 Name[x-test]=xxQCachegrindxx
 Name[zh_CN]=QCachegrind
