SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.8/kdesdk/kcachegrind/; revision=1290806

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -13,6 +13,7 @@ Name[de]=QCachegrind
 Name[el]=QCachegrind
 Name[es]=QCachegrind
 Name[et]=QCachegrind
+Name[fr]=QCachegrind
 Name[ga]=QCachegrind
 Name[hu]=QCachegrind
 Name[it]=QCachegrind
@@ -106,7 +107,7 @@ Comment[et]=Jõudluse profileerimise andmete visualiseerimise vahend
 Comment[eu]=Errendimendu profil datuen bistaratzea
 Comment[fa]=تجسم کارایی گزارش داده‌ها
 Comment[fi]=Visualisointi tehokkuusprofiloinnin tiedoista
-Comment[fr]=Visualisation de données de profilage de performance
+Comment[fr]=Visualise les données de profilage de performances
 Comment[ga]=Amharcléiriú ar Shonraí Próifílithe Feidhmíochta
 Comment[gl]=Visualización dos datos da análise de rendemento
 Comment[hu]=Teljesítményprofil-adatok megjelenítése
