--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -134,7 +134,7 @@ Comment[et]=Jõudluse profileerimise andmete visualiseerimise vahend
 Comment[eu]=Errendimendu profil datuen bistaratzea
 Comment[fa]=تجسم کارایی گزارش داده‌ها
 Comment[fi]=Visualisointi tehokkuusprofiloinnin tiedoista
-Comment[fr]=Visualisation de données de profilage de performance
+Comment[fr]=Visualise les données de profilage de performances
 Comment[ga]=Amharcléiriú ar Shonraí Próifílithe Feidhmíochta
 Comment[gl]=Visualización dos datos da análise de rendemento
 Comment[hu]=Teljesítményprofil-adatok megjelenítése
