SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.9/kdesdk/kcachegrind/; revision=1306497

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -13,6 +13,7 @@ Name[de]=QCachegrind
 Name[el]=QCachegrind
 Name[es]=QCachegrind
 Name[et]=QCachegrind
+Name[fi]=QCachegrind
 Name[fr]=QCachegrind
 Name[ga]=QCachegrind
 Name[hu]=QCachegrind
