SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1309657

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -13,6 +13,7 @@ Name[de]=QCachegrind
 Name[el]=QCachegrind
 Name[es]=QCachegrind
 Name[et]=QCachegrind
+Name[fi]=QCachegrind
 Name[fr]=QCachegrind
 Name[ga]=QCachegrind
 Name[hu]=QCachegrind
@@ -56,7 +57,7 @@ GenericName[fi]=Profiloijan käyttöliittymä
 GenericName[fr]=Interface de profilage
 GenericName[ga]=Comhéadan ar Phróifíleoir
 GenericName[gl]=Interface para o profiler
-GenericName[hu]=Profilozó
+GenericName[hu]=Ábrázoló előtétprogram
 GenericName[is]=Myndrænt viðmót á afkastakönnuð
 GenericName[it]=Interfaccia a profiler
 GenericName[ja]=プロファイラフロントエンド
