Move documentation into application folders, make every application build standalone or as part of kdesdk checkout
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1329172
(cherry picked from commit c923f5898508ac6d1fd4ca858dba7f3fc7feae2b)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ macro_additional_clean_files(
 	)
 ENDIF(NOT WIN32)
 
+add_subdirectory( doc )
 add_subdirectory( libcore )
 add_subdirectory( cgview )
 add_subdirectory( libviews )
