--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -6,6 +6,7 @@ MimeType=application/x-kcachegrind;
 Icon=kcachegrind
 Terminal=false
 Name=QCachegrind
+Name[bs]=QCachegrind
 Name[ca]=QCachegrind
 Name[ca@valencia]=QCachegrind
 Name[da]=QCachegrind
@@ -39,6 +40,7 @@ Name[zh_CN]=QCachegrind
 Name[zh_TW]=QCachegrind
 GenericName=Profiler Frontend
 GenericName[ast]=Interface del analizador de rendimientu
+GenericName[bs]=Profajlerski program
 GenericName[ca]=Frontal del Profiler
 GenericName[ca@valencia]=Frontal del Profiler
 GenericName[cs]=Rozhraní pro profilaci
@@ -94,6 +96,7 @@ GenericName[zh_TW]=分析器前端
 Comment=Visualization of Performance Profiling Data
 Comment[ast]=Visualización de datos d'analís de rendimientu
 Comment[bg]=Визуализация на данните за производителност
+Comment[bs]=Predočenje podataka profiliranja performansi
 Comment[ca]=Visualització de dades de perfilat de rendiment
 Comment[ca@valencia]=Visualització de dades de perfilat de rendiment
 Comment[cs]=Vizualizace profilovacích dat výkonu
