SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.10/kdesdk/kcachegrind/; revision=1330572

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -17,6 +17,7 @@ Name[et]=QCachegrind
 Name[fi]=QCachegrind
 Name[fr]=QCachegrind
 Name[ga]=QCachegrind
+Name[gl]=QCachegrind
 Name[hu]=QCachegrind
 Name[it]=QCachegrind
 Name[kk]=QCachegrind
