SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=1331250

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -6,6 +6,7 @@ MimeType=application/x-kcachegrind;
 Icon=kcachegrind
 Terminal=false
 Name=QCachegrind
+Name[bs]=QCachegrind
 Name[ca]=QCachegrind
 Name[ca@valencia]=QCachegrind
 Name[da]=QCachegrind
@@ -16,6 +17,7 @@ Name[et]=QCachegrind
 Name[fi]=QCachegrind
 Name[fr]=QCachegrind
 Name[ga]=QCachegrind
+Name[gl]=QCachegrind
 Name[hu]=QCachegrind
 Name[it]=QCachegrind
 Name[kk]=QCachegrind
