cmake: do not link to qt3support
no more needed

--- a/qcachegrind/CMakeLists.txt
+++ b/qcachegrind/CMakeLists.txt
@@ -13,7 +13,7 @@ add_executable(qcachegrind ${qcachegrind_SRCS} ${qcachegrind_H} ${qcachegrind_RS
 target_link_libraries(qcachegrind
 	 core views
 	 ${QT_QTGUI_LIBRARY} ${QT_QTCORE_LIBRARY}
-	 ${QT_QTDBUS_LIBRARY} ${QT_QT3SUPPORT_LIBRARY})
+	 ${QT_QTDBUS_LIBRARY})
 
 # do not install example code...
 # install(TARGETS qcachegrind ${INSTALL_TARGETS_DEFAULT_ARGS} )
