SVN_SILENT made messages (.desktop file)

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -29,6 +29,7 @@ Name[pa]=QCachegrind
 Name[pl]=QCachegrind
 Name[pt]=QCachegrind
 Name[pt_BR]=QCachegrind
+Name[ru]=QCachegrind
 Name[sk]=QCachegrind
 Name[sr]=Ку‑кешгринд
 Name[sr@ijekavian]=Ку‑кешгринд
