SVN_SILENT made messages (.desktop file)

--- a/qcachegrind/qcachegrind.desktop
+++ b/qcachegrind/qcachegrind.desktop
@@ -9,6 +9,7 @@ Name=QCachegrind
 Name[bs]=QCachegrind
 Name[ca]=QCachegrind
 Name[ca@valencia]=QCachegrind
+Name[cs]=QCachegrind
 Name[da]=QCachegrind
 Name[de]=QCachegrind
 Name[el]=QCachegrind
